# LexUR

./: .gitignore  Beyond_Pareto_Fronts.md  COVER_LETTER.md  EJOR_Acceptance_Plan.md  PROTOCOL_COMPLIANCE.md  README.md  REVISION_NOTES.md  STATE_Project.md  TODO.md
code/: Makefile  pyproject.toml  requirements-dev.txt  run_all.py  run_full_chunks.sh  run_protocol.py
code/configs/: _smoke.yaml  claims.yaml  ejor_final.yaml  ejor_pilot.yaml
code/lexur/: __init__.py  analysis.py  directopt.py  experiments.py  extras_validation.py  families.py  figure_evidence.py  gates.py  manuscript.py  methods.py  metrics.py  normalization.py  probe_validation.py  problems.py  provenance.py  publication_figures.py  reporting.py  smartgrid.py  stats.py
code/lur/: __init__.py  claim_gate.py  directopt.py  experiments.py  extras_validation.py  families.py  gates.py  manuscript.py  methods.py  metrics.py  normalization.py  probe_validation.py  problems.py  provenance.py  records.py  reporting.py  smartgrid.py  stats.py
code/scripts/: check_manuscript_numbers.py  generate_auditability.py  make_paper_figures.py  regen_cd_protocol.py
code/tests/: test_claim_gate.py  test_directopt.py  test_families.py  test_figure_evidence.py  test_figure_experiments.py  test_gates.py  test_manuscript_check.py  test_methods.py  test_metrics_full.py  test_normalization.py  test_probe_validation.py  test_problems.py  test_provenance.py  test_publication_figures.py  test_records.py  test_reporting.py  test_smartgrid.py  test_smoke.py  test_stats.py
paper/: EJOR_Referee_Report.md  certificate.pdf.json  (+7 more)
(+90 files in other folders)
