[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lexur"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
  "numpy>=1.26,<2.0",
  "scipy>=1.11,<1.14",
  "pandas>=2.1,<2.3",
  "scikit-learn>=1.3,<1.6",
  "matplotlib>=3.8,<3.10",
  "PyYAML>=6.0,<7",
  "PuLP>=2.8,<3",
  "statsmodels>=0.14,<0.15",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["lur*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
