[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lexur"
version = "1.0.0"
requires-python = ">=3.11,<3.13"
dependencies = [
  "numpy>=1.26,<2.0",
  "scipy>=1.11,<1.14",
  "pandas>=2.1,<2.3",
  "pyarrow>=14,<20",
  "matplotlib>=3.8,<3.10",
  "PyYAML>=6.0,<7",
  "PuLP>=2.8,<3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["lexur*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
filterwarnings = [
  "ignore:.*deprecated.*:pyparsing.warnings.PyparsingDeprecationWarning:matplotlib\\..*",
  "ignore:.*parseAll.*:pyparsing.warnings.PyparsingDeprecationWarning",
]
